--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,2 +1,66 @@
 @import "../../node_modules/bootstrap/scss/functions";
 @import "../../node_modules/bootstrap/scss/variables";
+
+
+
+//* Mes variables couleurs :
+$chef-red : #C42D40;
+
+
+//* Notre customisations des couleurs :
+$custom-colors : (
+    "chef-red" : $red ,
+);
+
+//* Fusionner les informations avec celles de bootstrap :
+$theme-colors : map-merge($theme-colors , $custom-colors);
+
+//& Notre valeur d'espace :
+$spacer : 20px;
+
+$custom-spacers : (0 : 0,
+    1 : $spacer*1 ,
+    2 : $spacer*2 ,
+    3 : $spacer*3 ,
+    4 : $spacer*4 ,
+    5 : $spacer*5 ,
+    6 : $spacer*6 ,
+    7 : $spacer*7 ,
+    8 : $spacer*8 ,
+    9 : $spacer*9 ,
+    10 : $spacer*10 ,
+    11 : $spacer*11 ,
+    12 : $spacer*12 ,
+    13 : $spacer*13 ,
+    14 : $spacer*14 ,
+    15 : $spacer*15 ,
+);
+
+//& Fusionner et écrire nos valeurs d'espacement :
+$spacers : map-merge($spacers , $custom-spacers );
+
+//? Position value :
+$custom-position : (0 : 0,
+    5 : 5%,
+    10 : 10%,
+    15 : 15%,
+    20 : 20%,
+    25 : 25%,
+    30 : 30%,
+    35 : 35%,
+    40 : 40%,
+    45 : 45%,
+    50 : 50%,
+    55 : 55%,
+    60 : 60%,
+    65 : 65%,
+    70 : 70%,
+    75 : 75%,
+    80 : 80%,
+    85 : 85%,
+    90 : 90%,
+    95 : 95%,
+    100 : 100%,
+);
+
+$position-values : map-merge($position-values, $custom-position);
