--- a/src/sass/modules/home/_main.scss
+++ b/src/sass/modules/home/_main.scss
@@ -1,10 +1,47 @@
-main{
-    .bg-img{
+main {
+    .bg-img {
         background-image: url(../img/banner1.jpg);
         height: 100vh;
         background-size: cover;
         background-repeat: no-repeat;
         background-blend-mode: darken;
         background-color: rgba(0, 0, 0, 0.69);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .banner-content {
+            width: 50%;
+            font-family: "courgette";
+            text-align: center;
+
+            .banner-text {
+                color: white;
+
+                @media (max-width: 768px) {
+                    font-size: 2rem;
+                    margin-top: 4rem;
+                }
+            }
+
+            .banner-btn {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 10px;
+
+                button {
+                    padding: 10px;
+                }
+            }
+        }
+    }
+}
+
+.big-text {
+    font-size: 4rem;
+
+    @media (max-width: 768px) {
+        font-size: 2rem;
     }
 }
