--- a/src/sass/modules/home/_main.scss
+++ b/src/sass/modules/home/_main.scss
@@ -36,6 +36,18 @@ main {
             }
         }
     }
+
+    .chefs{
+        margin-top: 20px;
+        background-image: url(../img/team_background.jpg);
+        height: auto;
+        background-position: center;
+        background-blend-mode: darken;
+        background-color: rgba(0, 0, 0, 0.69);
+        .chefs-text{
+            font-family: "courgette";
+        }
+    }
 }
 
 .big-text {
