--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14760,6 +14760,16 @@ main .bg-img .banner-content .banner-btn {
 main .bg-img .banner-content .banner-btn button {
   padding: 10px;
 }
+main .menu {
+  background-image: url(../img/main_bg.jpg);
+  height: 100vh;
+}
+main .menu .menu-paper {
+  height: 100%;
+}
+main .menu .menu-paper h1, main .menu .menu-paper .h1 {
+  font-family: "courgette";
+}
 main .chefs {
   margin-top: 20px;
   background-image: url(../img/team_background.jpg);
