--- a/src/sass/modules/home/_main.scss
+++ b/src/sass/modules/home/_main.scss
@@ -70,6 +70,14 @@ main {
             font-family: "courgette";
         }
     }
+
+    .testimonials{
+        background-image: url(../img/testimonials_background.jpg);
+        height: auto;
+        h1{
+            font-family: "courgette";
+        }
+    }
 }
 
 .big-text {
