--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14718,7 +14718,6 @@ header nav ul li a:hover {
 }
 header nav ul li:hover {
   background-color: #C42D40;
-  padding: 10px;
 }
 
 main .bg-img {
@@ -14814,6 +14813,16 @@ main .contact .contact-info {
   }
 }
 
+.bottom-deco {
+  background-image: url(../img/bottom_decoration_img.png);
+  height: 20px;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  background-repeat: repeat-x;
+  background-position: center;
+}
+
 input {
   padding: 12px;
 }
@@ -14833,9 +14842,21 @@ input {
   border-radius: 15px;
 }
 
+.footer-deco {
+  background-image: url(../img/footer_bottom_decoration_img.png);
+  height: 20px;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  background-repeat: repeat-x;
+  background-position: center;
+  z-index: 1031;
+}
+
 footer {
   background-image: url(../img/footer_background.jpg);
   height: auto;
+  background-attachment: fixed;
 }
 footer div {
   width: 33%;
