--- a/src/sass/modules/home/_header.scss
+++ b/src/sass/modules/home/_header.scss
@@ -1,9 +1,9 @@
-
-
 header {
+    // for nav bar above background image
     position: absolute;
     width: 100%;
     nav {
+        font-family: "roboto";
         ul {
             list-style: none;
             display: flex;
