--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14768,6 +14768,13 @@ main .menu .menu-paper {
 main .menu .menu-paper h1, main .menu .menu-paper .h1 {
   font-family: "courgette";
 }
+main .menu .menu-paper .tab-section div .list-group .active {
+  background-color: white;
+  color: #2b2b2b;
+  border: none;
+  border-right: solid 7px #C42D40;
+  padding: 0;
+}
 main .menu .menu-paper .form-bg-img {
   background-image: url(../img/book_table_bg.jpg);
   height: auto;
