--- a/src/sass/modules/home/_main.scss
+++ b/src/sass/modules/home/_main.scss
@@ -59,6 +59,7 @@ main {
                             border: none;
                             border-right: solid 7px $chef-red;
                             padding: 0;
+                            color: $chef-red;
                         }
 
                     }
