--- a/src/sass/modules/home/_main.scss
+++ b/src/sass/modules/home/_main.scss
@@ -13,10 +13,10 @@ main {
 
         .banner-content {
             width: 50%;
-            font-family: "courgette";
             text-align: center;
 
             .banner-text {
+                font-family: "courgette";
                 color: white;
 
                 @media (max-width: 768px) {
@@ -30,6 +30,7 @@ main {
                 justify-content: center;
                 align-items: center;
                 gap: 10px;
+                font-family: "roboto";
 
                 button {
                     padding: 10px;
@@ -56,7 +57,7 @@ main {
                         .active {
                             background-color: white;
                             color: #2b2b2b;
-                            border: none;
+                            border: 1px solid $chef-red;
                             border-right: solid 7px $chef-red;
                             padding: 0;
                             color: $chef-red;
@@ -82,6 +83,12 @@ main {
         background-position: center;
         background-blend-mode: darken;
         background-color: rgba(0, 0, 0, 0.69);
+
+        .chef {
+            img {
+                border-bottom: 2px solid gray;
+            }
+        }
 
         .chefs-text {
             font-family: "courgette";
@@ -151,4 +158,14 @@ input {
 [src="./public/img/blog_img1.jpg"] {
     border: 5px solid rgb(175, 175, 175);
     border-radius: 15px;
+}
+
+hr {
+    width: 90%;
+    background-color: #ffffff;
+    height: 2px;
+}
+
+.money {
+    padding: 4px;
 }
