--- a/src/sass/modules/home/_footer.scss
+++ b/src/sass/modules/home/_footer.scss
@@ -21,12 +21,14 @@ footer {
     height: 12vh;
 }
 
+// footer tags 
 .tags-text {
     button {
         margin: 4px;
     }
 }
 
+// for instagram images
 .gap-test {
     gap: 5px;
 }
